# beeware-theme

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/section_three/: index.rst
docs/section_two/: index.rst  page_two.rst
src/beeware_theme/: __init__.py
src/beeware_theme/_static/: beeware-theme.css
src/beeware_theme/_templates/: base.html  header.html
src/beeware_theme/_templates/sidebar/: brand.html
