[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "beeware-theme"
version = "0.0.1"
authors = [
  { name="Kattni", email="kattni@kattni.com" },
  { name="Russell Keith-Magee", email="russell@beeware.org" },
  { name="Pradyun Gedam", email="mail@pradyunsg.me" },
]
description = "Template files to override the Furo Sphinx theme with a BeeWare theme."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kattni/beeware-theme"
Issues = "https://github.com/kattni/beeware-theme/issues"
