[build-system]
requires = ["setuptools == 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beeware_theme"
version = "20250619.0"
authors = [
  { name="Kattni", email="kattni@kattni.com" },
]
maintainers = [
  { name="BeeWare Team", email="team@beeware.org" },
]
description = "Template files to override the Furo Sphinx theme with a BeeWare theme."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.optional-dependencies]
docs = [
   "sphinx == 8.2.3",
   "furo == 2024.8.6",
]

[project.urls]
Homepage = "https://github.com/beeware/beeware-theme"
Issues = "https://github.com/beeware/beeware-theme/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
