[build-system]
requires = ["setuptools == 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beeware_theme"
version = "2025.06.19.0"
authors = [
  { name="Kattni", email="kattni@kattni.com" },
]
maintainers = [
  { name="BeeWare Team", email="team@beeware.org" },
]
description = "A set of Furo theme extensions to make a Sphinx site have BeeWare site branding."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "tox == 4.27.0",
]
docs = [
    "furo == 2024.8.6",
    "sphinx == 8.2.3",
    "sphinx-autobuild == 2024.10.3",
]

[project.urls]
Homepage = "https://github.com/beeware/beeware-theme"
Issues = "https://github.com/beeware/beeware-theme/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
beeware_theme = [
    "**/*.html",
    "**/*.css",
]
